--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
+        "react-sticky-box": "^2.0.5",
         "react-to-pdf": "^0.0.14",
         "react-to-print": "^2.14.10",
         "react-toastify": "^8.2.0",
